# lovli

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  pyrightconfig.json  pytest.ini
PRD/: MVP_roadmap.md
docs/: CATALOG_SUMMARIES.md  GOALS_AND_METRICS.md  PROJECT_ROADMAP.md  RAG_CONCEPTS.md  REFACTORING_PLAN.md  STATUS_2026-02-16.md  STATUS_2026-02-21.md  TECH_STACK.md  general_info.md  nl_missing_summaries.txt  project_description.md
eval/: editorial_precision_candidates_sample.json  law_contamination_report.json  questions.jsonl  results_answer.jsonl  results_retrieval.jsonl  retrieval_sweep_results (4).json  review.csv
eval/baselines/: production_trust_baseline_v1.json
notebooks/: index_to_qdrant.ipynb  sweep_retrieval_thresholds.ipynb  validate_reindex_h100_colab.ipynb
scripts/: analyze_law_contamination.py  bench_editorial_precision.py  build_catalog.py  check_duplicate_point_ids.py  check_regression_gates.py  convert_xml_to_txt.py  create_payload_indexes.py  eval_answers.py  eval_langsmith.py  eval_retrieval.py  index_husleieloven.py  index_laws.py  migrate_article_ids.py  sweep_retrieval_thresholds.py  upload_dataset.py  validate_reindex.py
src/lovli/: __init__.py  catalog.py  chain.py  config.py  editorial.py  eval.py  eval_utils.py  indexer.py  parser.py  profiles.py  reranking.py  retrieval_shared.py  routing.py  scoring.py  trust_profiles.py  (+2 more)
tests/: README.md  __init__.py  conftest.py  test_analyze_law_contamination_metrics.py  test_chain.py  test_editorial.py  test_indexer.py  test_integration.py  test_parser.py  test_utils.py
